# TheAlgorithms-C

./: CMakeLists.txt
data_structures/bin_tree/: CMakeLists.txt  bin_tree.c  bin_tree.h  main.c  queue.c  queue.h
data_structures/graph/: CMakeLists.txt  adjacency_matrix.c  adjacency_matrix.h  graph.h  main.c  queue.h  stack.c  stack.h  test.c  test.h
data_structures/hash_table/: CMakeLists.txt  hash_table.c  hash_table.h  main.c
data_structures/heap/: CMakeLists.txt  heap.h  main.c  max_heap.c
data_structures/linked_list/: CMakeLists.txt  linked_list.c  linked_list.h  main.c  test.c  test.h
data_structures/queue/: CMakeLists.txt  main.c  queue.c  queue.h  test.c  test.h
data_structures/stack/: CMakeLists.txt  array_stack.c  main.c  stack.c  stack.h
