cmake_minimum_required(VERSION 3.5)

add_subdirectory(data_structures/linked_list)
add_subdirectory(data_structures/stack)
add_subdirectory(data_structures/queue)
add_subdirectory(data_structures/bin_tree)
add_subdirectory(data_structures/heap)
add_subdirectory(data_structures/hash_table)
add_subdirectory(data_structures/graph)
